--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
-    "lucide-react": "0.344.0",
+    "lucide-react": "^0.575.0",
     "mysql2": "^3.17.4",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
